# dopplermap

./: apps.txt  pyproject.toml
dopplermap/: api.py  hooks.py
dopplermap/config/: desktop.py
dopplermap/public/frontend_react/: dopplermap.css  dopplermap.js
dopplermap/www/dopplermap_ui/: index.html
dopplermap_app/: api.py  hooks.py
dopplermap_app/www/doppler_ui/: index.html
dopplermap_app/www/doppler_ui/assets/: index-B5OrLo3c.js  index-BcJw4JKu.js  index-CvfDvnpt.css  index-D9OqPudS.js
